# recall

./: .gitignore  README.md  pyproject.toml
src/recall/: config.py  main.py  models.py  utils.py
src/recall/clipboard/: listener.py  operations.py
src/recall/core/: __init__.py  clipboard.py  db.py  listener.py
src/recall/storage/: db.py
src/recall/ui/: __init__.py  commands.py  main_window.py
src/recall/ui/components/: item_widget.py
src/recall/ui/views/: main_window.py
